--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "class": "^0.1.4",
+    "classnames": "^2.3.2",
     "moment": "^2.29.4",
     "names": "^1.0.0",
     "react": "^18.2.0",
